fix: removed ignorefortoc

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -54,10 +54,7 @@
 						"fluid.prefs.tableOfContents": {
 							enactor: {
 								"tocTemplate": "/lib/infusion/src/components/tableOfContents/html/TableOfContents.html",
-								"tocMessage": "/lib/infusion/src/framework/preferences/messages/tableOfContents-enactor.json",
-								ignoreForToC: {
-									"overviewPanel": ".flc-overviewPanel"
-								}
+								"tocMessage": "/lib/infusion/src/framework/preferences/messages/tableOfContents-enactor.json"
 							}
 						}
 					},
