fix: added uio syllabification

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -56,6 +56,13 @@
 								"tocTemplate": "/lib/infusion/src/components/tableOfContents/html/TableOfContents.html",
 								"tocMessage": "/lib/infusion/src/framework/preferences/messages/tableOfContents-enactor.json"
 							}
+						},
+						"fluid.prefs.syllabification": {
+							enactor: {
+								terms: {
+									patternPrefix: "/lib/infusion/src/lib/hypher/patterns"
+								}
+							}
 						}
 					},
 					prefsEditorLoader: {
