fix: remove uio syllabification code

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -39,12 +39,7 @@
 						"fluid.prefs.textFont",
 						"fluid.prefs.contrast",
 						"fluid.prefs.tableOfContents",
-						"fluid.prefs.enhanceInputs",
-						// TODO :Simplify (not part of prefs framework for now, Justin may add it) - currently "demo.prefs.simplify"
-						// TODO: Text to speech,
-						"fluid.prefs.syllabification"
-						// TODO: Word spacing (optional),
-						// TODO: Letter spacing (optional),
+						"fluid.prefs.enhanceInputs"
 					],
 					auxiliarySchema: {
 						terms: {
