--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -11,6 +11,21 @@
 		<link rel="preload" href="/lib/infusion/dist/infusion-uio.min.js" as="script">
 		{% block headerScripts %}{% endblock %}
 
+		<!-- Fonts -->
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-italic.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-500.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-600.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-700.woff2" as="font" type="font/woff2" crossorigin />
+		<link rel="preload" href="/fonts/roboto-v20-latin-regular.woff2" as="font" type="font/woff2" crossorigin />
+
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-regular.woff" as="font" type="font/woff" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-italic.woff" as="font" type="font/woff" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-500.woff" as="font" type="font/woff" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-600.woff" as="font" type="font/woff" crossorigin />
+		<link rel="preload" href="/fonts/fira-sans-v10-latin-700.woff" as="font" type="font/woff" crossorigin />
+		<link rel="preload" href="/fonts/roboto-v20-latin-regular.woff" as="font" type="font/woff" crossorigin />
+
 		<!-- CSS files for UI Options-->
 		<link rel="stylesheet" type="text/css" href="/lib/infusion/dist/assets/src/framework/preferences/css/Enactors.css"/>
 		<link rel="stylesheet" type="text/css" href="/lib/infusion/dist/assets/src/framework/preferences/css/PrefsEditor.css"/>
