--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,5 +1,6 @@
 // Component-specific styles.
 @import "brand";
+@import "search";
 @import "news-and-views";
 @import "pagination";
 @import "cards";
