--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -52,6 +52,9 @@ header {
 				position: absolute;
 				top: rem(184);
 				width: 100%;
+				// On mobile layout, make sure the popup nav menu shows on top of the search svg that
+				// has z-index: 1
+				z-index: 2;
 
 				a {
 					border-bottom: solid rem(2);
@@ -73,34 +76,6 @@ header {
 
 			button[aria-expanded="true"] + nav {
 				display: block;
-			}
-
-			// Styles for the search container
-			.search-container {
-				align-items: center;
-				display: flex;
-
-				svg {
-					fill: white;
-					height: rem(24);
-					margin: rem(-29);
-					width: rem(24);
-					z-index: 1;
-				}
-
-				input[type="search"] {
-					border: 0;
-					border-radius: 50%;
-					outline: none;
-					padding: rem(8) rem(16);
-					width: rem(16);
-
-					&:focus {
-						border-radius: rem(28);
-						padding-left: rem(32);
-						width: rem(160);
-					}
-				}
 			}
 		}
 	}
@@ -124,6 +99,7 @@ header {
 					justify-content: space-around;
 					position: inherit;
 					top: rem(120);
+					z-index: 0;
 
 					a {
 						border-bottom: none;
@@ -140,20 +116,6 @@ header {
 
 				button[aria-expanded="true"] + nav {
 					display: flex;
-				}
-
-				.search-container {
-					svg {
-						margin: rem(-40);
-					}
-
-					input[type="search"],
-					input[type="search"]:focus {
-						border-radius: rem(28);
-						font-size: inherit;
-						padding: rem(16) rem(48);
-						width: rem(240);
-					}
 				}
 			}
 		}
