--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -45,32 +45,6 @@ a:focus {
 	outline: none;
 }
 
-button {
-	background-color: $green-light;
-	border: 0;
-	border-radius: rem(28);
-	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
-	color: $green-dark;
-	font-size: rem(24);
-	font-weight: 400;
-	height: rem(54);
-	line-height: (34 / 24);
-	padding: rem(8) rem(34);
-	transform: perspective(rem(1)) translateZ(0);
-}
-
-button::before {
-	border-radius: rem(26);
-	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
-	content: '';
-	height: rem(54);
-	left: 0;
-	opacity: 1;
-	position: absolute;
-	top: 0;
-	width: 100%;
-}
-
 button:hover::before,
 button:focus::before,
 button:active::before {
@@ -89,6 +63,32 @@ button:focus {
 button:-moz-focusring {
 	color: transparent;
 	text-shadow: 0 0 0 $green-dark;
+}
+
+button:not(.fl-prefsEditor-buttons button) {
+	background-color: $green-light;
+	border: 0;
+	border-radius: rem(28);
+	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
+	color: $green-dark;
+	font-size: rem(24);
+	font-weight: 400;
+	height: rem(54);
+	line-height: (34 / 24);
+	padding: rem(8) rem(34);
+	transform: perspective(rem(1)) translateZ(0);
+}
+
+button::before:not(.fl-prefsEditor-buttons button) {
+	border-radius: rem(26);
+	box-shadow: 0 0 0 rem(2) $blue-alt-light inset;
+	content: '';
+	height: rem(54);
+	left: 0;
+	opacity: 1;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 
 @media screen and (min-width: 1024px) {
