--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,4 +1,5 @@
 @font-face {
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 400;
@@ -10,6 +11,7 @@
 }
 
 @font-face {
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: italic;
 	font-weight: 400;
@@ -21,6 +23,7 @@
 }
 
 @font-face {
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 500;
@@ -32,6 +35,7 @@
 }
 
 @font-face {
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 600;
@@ -43,6 +47,7 @@
 }
 
 @font-face {
+	font-display: optional;
 	font-family: 'Fira Sans';
 	font-style: normal;
 	font-weight: 700;
@@ -51,4 +56,20 @@
 		local('FiraSans-Bold'),
 		url('../fonts/fira-sans-v10-latin-700.woff2') format('woff2'),
 		url('../fonts/fira-sans-v10-latin-700.woff') format('woff');
+}
+
+@font-face {
+	font-display: optional;
+	font-family: 'Roboto';
+	font-style: normal;
+	font-weight: 400;
+	src: url('../fonts/roboto-v20-latin-regular.eot'); /* IE9 Compat Modes */
+	src:
+		local('Roboto'),
+		local('Roboto-Regular'),
+		url('../fonts/roboto-v20-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+		url('../fonts/roboto-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
+		url('../fonts/roboto-v20-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+		url('../fonts/roboto-v20-latin-regular.svg#Roboto') format('svg'); /* Legacy iOS */
 }
