feat: Add UIO syllables panel (resolves #246) (#247)
* fix: added uio syllabification

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -56,7 +56,8 @@
 						"fluid.prefs.textFont",
 						"fluid.prefs.contrast",
 						"fluid.prefs.tableOfContents",
-						"fluid.prefs.enhanceInputs"
+						"fluid.prefs.enhanceInputs",
+						"fluid.prefs.syllabification"
 					],
 					auxiliarySchema: {
 						terms: {
@@ -67,6 +68,13 @@
 							enactor: {
 								"tocTemplate": "/lib/infusion/src/components/tableOfContents/html/TableOfContents.html",
 								"tocMessage": "/lib/infusion/src/framework/preferences/messages/tableOfContents-enactor.json"
+							}
+						},
+						"fluid.prefs.syllabification": {
+							enactor: {
+								terms: {
+									patternPrefix: "/lib/infusion/src/lib/hypher/patterns"
+								}
 							}
 						}
 					},
