--- a/src/_includes/components/search.njk
+++ b/src/_includes/components/search.njk
@@ -1,5 +1,6 @@
 <div class="search-container">
-    <form id="search-form" method="get" action="/search/">
-        <input name="s" type="search" placeholder="Search..." aria-label="Enter keywords for a site-wide search"> 
-    </form>
+	{% include 'svg/search.svg' %}
+	<form id="search-form" method="get" action="/search/">
+		<input name="s" type="search" placeholder="Search..." aria-label="Enter keywords for a site-wide search">
+	</form>
 </div>
