--- a/src/scss/components/_news-and-views.scss
+++ b/src/scss/components/_news-and-views.scss
@@ -1,3 +1,136 @@
+// CSS classes for the placeholder svg
+.fill-fadc90 {
+	fill: var(--theme-background-fill, #fadc90);
+}
+
+.fill-fdcc70 {
+	fill: var(--theme-background-fill, #fdcc70);
+}
+
+.fill-f49822 {
+	fill: var(--theme-background-fill, #f49822);
+}
+
+.fill-cee6c5 {
+	fill: var(--theme-background-fill, #cee6c5);
+}
+
+.fill-fcb33e {
+	fill: var(--theme-background-fill, #fcb33e);
+}
+
+.fill-c0d8ca {
+	fill: var(--theme-background-fill, #c0d8ca);
+}
+
+.fill-c1c6c1 {
+	fill: var(--theme-background-fill, #c1c6c1);
+}
+
+.fill-a0b9c1 {
+	fill: var(--theme-background-fill, #a0b9c1);
+}
+
+.fill-8cb6c6 {
+	fill: var(--theme-background-fill, #8cb6c6);
+}
+
+.fill-acdde9 {
+	fill: var(--theme-background-fill, #acdde9);
+}
+
+.fill-aedbd5 {
+	fill: var(--theme-background-fill, #aedbd5);
+}
+
+.fill-b0d0be {
+	fill: var(--theme-background-fill, #b0d0be);
+}
+
+.fill-b2bcb1 {
+	fill: var(--theme-background-fill, #b2bcb1);
+}
+
+.fill-8eabb8 {
+	fill: var(--theme-background-fill, #8eabb8);
+}
+
+.fill-77a5bb {
+	fill: var(--theme-background-fill, #77a5bb);
+}
+
+.fill-84bcde {
+	fill: var(--theme-background-fill, #84bcde);
+}
+
+.fill-85bbd1 {
+	fill: var(--theme-background-fill, #85bbd1);
+}
+
+.fill-88b5c4 {
+	fill: var(--theme-background-fill, #88b5c4);
+}
+
+.fill-8caabb {
+	fill: var(--theme-background-fill, #8caabb);
+}
+
+.fill-74a0bf {
+	fill: var(--theme-background-fill, #74a0bf);
+}
+
+.fill-639cc0 {
+	fill: var(--theme-background-fill, #639cc0);
+}
+
+.fill-6995bf {
+	fill: var(--theme-background-fill, #6995bf);
+}
+
+.fill-6b91b7 {
+	fill: var(--theme-background-fill, #6b91b7);
+}
+
+.fill-6f8ab1 {
+	fill: var(--theme-background-fill, #6f8ab1);
+}
+
+.fill-6085b3 {
+	fill: var(--theme-background-fill, #6085b3);
+}
+
+.fill-5482b3 {
+	fill: var(--theme-background-fill, #5482b3);
+}
+
+.fill-556da2 {
+	fill: var(--theme-background-fill, #556da2);
+}
+
+.fill-566d9e {
+	fill: var(--theme-background-fill, #566d9e);
+}
+
+.fill-566a9a {
+	fill: var(--theme-background-fill, #566a9a);
+}
+
+.fill-586697 {
+	fill: var(--theme-background-fill, #586697);
+}
+
+.fill-506499 {
+	fill: var(--theme-background-fill, #506499);
+}
+
+.fill-486399 {
+	fill: var(--theme-background-fill, #486399);
+}
+
+.fill-6895c6 {
+	fill: var(--theme-background-fill, #6895c6);
+}
+
 .news-grid {
 	display: grid;
 	grid-gap: rem(30) rem(38);
