--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -58,7 +58,7 @@ header {
 					color: $white;
 					display: block;
 					float: none;
-					font-size: rem(24);
+					font-size: rem(24) !important; // Enactors.css in infusion uses !important on this element
 					font-weight: $font-weight-normal;
 					margin: rem(16) rem(16);
 					text-align: left;
