fix: set the minimum value for UIO line space to 1

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -48,41 +48,6 @@
 			{% include 'components/footer.njk' %}
 		</div>
 		{% block footerScripts %}{% endblock %}
-		<script type="text/javascript">
-			$(document).ready(function () {
-				fluid.uiOptions(".flc-prefsEditor-separatedPanel", {
-					preferences: [
-						"fluid.prefs.lineSpace",
-						"fluid.prefs.textFont",
-						"fluid.prefs.contrast",
-						"fluid.prefs.tableOfContents",
-						"fluid.prefs.enhanceInputs",
-						"fluid.prefs.syllabification"
-					],
-					auxiliarySchema: {
-						terms: {
-							"templatePrefix": "/lib/infusion/src/framework/preferences/html",
-							"messagePrefix": "/lib/infusion/src/framework/preferences/messages"
-						},
-						"fluid.prefs.tableOfContents": {
-							enactor: {
-								"tocTemplate": "/lib/infusion/src/components/tableOfContents/html/TableOfContents.html",
-								"tocMessage": "/lib/infusion/src/framework/preferences/messages/tableOfContents-enactor.json"
-							}
-						},
-						"fluid.prefs.syllabification": {
-							enactor: {
-								terms: {
-									patternPrefix: "/lib/infusion/src/lib/hypher/patterns"
-								}
-							}
-						}
-					},
-					prefsEditorLoader: {
-						lazyLoad: true
-					}
-				});
-			});
-		</script>
+		<script src="/js/uio.js" defer></script>
 	</body>
 </html>
