fix: adjusted margin of search svg

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -144,7 +144,7 @@ header {
 
 				.search-container {
 					svg {
-						margin: rem(-40);
+						margin: -2rem;
 					}
 
 					input[type="search"],
