fix: properly formated rem functions with negative input

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -13,7 +13,7 @@
 	header .site-nav-wrapper .site-nav .search-container svg {
 		fill: currentColor;
 		height: rem(19.2);
-		margin: -rem(25.6);
+		margin: rem(-25.6);
 		width: rem(19.2);
 	}
 
