feat: in progress adding the search functionality on the views page

--- a/src/_includes/components/header.njk
+++ b/src/_includes/components/header.njk
@@ -32,6 +32,7 @@
         <div class="site-nav">
             {% include 'components/header-nav.njk' %}
 
+						{% set searchAction = "/search/" %}
 						{% set placeholderForSearch = "Search..." %}
             {% set ariaLabelForSearch = "Enter keywords for a site-wide search" %}
             {% include 'components/search.njk' %}
