fix: placed media query for svg positioning inside mixins scss

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -109,4 +109,13 @@
 	.news-grid .api-content .news-item .preview-content::after {
 		background: $bColor;
 	}
+
+	@media screen and (min-width: 1024px) {
+		// Search icon positioning
+		header .site-nav-wrapper .site-nav .search-container svg {
+			height: rem(24);
+			margin: rem(-40);
+			width: rem(24);
+		}
+	}
 }
