--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 // Mixins.
 
-// To adapt to UIO high contrast themes
-@mixin adapt-to-contrastThemes($fColor, $bColor) {
+// To adapt to UIO contrast themes
+@mixin adapt-to-uioThemes($fColor, $bColor) {
 	// WeCount logo
 	.logo circle,
 	.logo path {
@@ -10,6 +10,9 @@
 		stroke-linecap: round;
 		stroke-width: rem(3);
 	}
+
+	--logo-stroke: #{$fColor};
+
 	// Search icon; IDRC, OCADU and Canada logos
 	header .site-nav-wrapper .site-nav .search-container svg {
 		fill: currentColor;
@@ -28,12 +31,17 @@
 		stroke-width: rem(3);
 	}
 
+	--theme-background-fill: #{$bColor};
+	--placeholder-stroke: #{$fColor};
+
+	// Focus/hover styles for SVGs on the footer
 	footer .footer-content {
-		// fix overlap of box-shadow on footer links
+		// Logos on the footer
 		.funders a,
 		.footer-logos a {
 			padding: rem(5);
 		}
+
 		// Social media icons
 		.social-media .social-media-icons a {
 			svg path {
@@ -51,7 +59,7 @@
 		}
 	}
 
-	// UIO focus style focus/hover styles for links in uio contrast themes
+	// Focus/hover styles for links
 	#defaultContainer a:focus,
 	#defaultContainer a:hover,
 	#defaultContainer header .site-nav-wrapper .site-nav nav a:focus,
@@ -69,13 +77,13 @@
 	}
 
 	#defaultContainer {
-		// fix overlap of box-shadow on buttons
+		// UIO buttons
 		.fl-prefsEditor-buttons button {
 			padding-left: rem(3);
 			padding-right: rem(3);
 		}
 
-		// undo default focus/hover styling on next, previous and current pagination
+		// Pagination on the contrast theme: previous, next, current page
 		.content-wrapper main .pagination .pagination-list {
 			.pagination-next,
 			.pagination-previous,
@@ -84,24 +92,23 @@
 			}
 		}
 
-		// cards and homepage have no background in contrast themes
+		.content-wrapper main .pagination .pagination-list li a[aria-current="page"] {
+			background-color: $fColor !important; // Enactors.css in infusion uses !important on this element
+			box-shadow: none;
+			color: $bColor !important; // Enactors.css in infusion uses !important on this element
+			&:hover,
+			&:focus {
+				box-shadow:
+					0 0 0 rem(4) $bColor,
+					0 0 0 rem(6) $fColor;
+			}
+		}
+
+		// Home page cards: hide background images on UIO contrast themes
 		.blue,
 		.green,
 		.yellow {
 			background-image: none;
-		}
-	}
-
-	// Current page pagination styling for uio contrast themes
-	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"] {
-		background-color: $fColor !important; // Enactors.css in infusion uses !important on this element
-		box-shadow: none;
-		color: $bColor !important; // Enactors.css in infusion uses !important on this element
-		&:hover,
-		&:focus {
-			box-shadow:
-				0 0 0 rem(4) $bColor,
-				0 0 0 rem(6) $fColor;
 		}
 	}
 
@@ -111,7 +118,7 @@
 	}
 
 	@media screen and (min-width: 1024px) {
-		// Search icon positioning
+		// Adjust the position of the search icon on the header
 		header .site-nav-wrapper .site-nav .search-container svg {
 			height: rem(24);
 			margin: rem(-40);
