fix: display the footer in the desktop layout from the ipad size screen

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -158,7 +158,7 @@ footer {
 	}
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) {
 	footer {
 		margin-top: rem(0);
 
@@ -215,6 +215,10 @@ footer {
 				align-self: end;
 				grid-column: 2/3;
 				grid-row: 2/3;
+
+				svg {
+					margin-bottom: rem(16);
+				}
 			}
 
 			.contact-info {
