fix: add the UIO table of content style and use rem() for media queries

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -117,7 +117,7 @@
 		background: $bColor;
 	}
 
-	@media screen and (min-width: 1024px) {
+	@media screen and (min-width: rem(1024)) {
 		// Adjust the position of the search icon on the header
 		header .site-nav-wrapper .site-nav .search-container svg {
 			height: rem(24);
