--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -124,7 +124,7 @@
 	}
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: rem(1024)) {
 	.pagination {
 		.previous,
 		.next {
