--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -158,7 +158,7 @@ footer {
 	}
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: rem(768)) {
 	footer {
 		margin-top: rem(0);
 
