fix: adjust colors of toc texts and bullets

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -117,6 +117,11 @@
 		background: $bColor;
 	}
 
+	// UIO table of content
+	.flc-toc-tocContainer ul li::before {
+		color: $fColor;
+	}
+
 	@media screen and (min-width: rem(1024)) {
 		// Adjust the position of the search icon on the header
 		header .site-nav-wrapper .site-nav .search-container svg {
