--- a/src/page.njk
+++ b/src/page.njk
@@ -1,3 +1,11 @@
+---
+pagination:
+    data: collections.pages
+    size: 1
+    alias: pageItem
+permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug  }}/"
+---
+
 {% extends 'layouts/base.njk' %}
 
 {% set pageTitle = pageItem.title %}
@@ -9,7 +17,7 @@
     <article>
     <h1 class="title">{{ pageTitle }}</h1>
     <div class="api-content">
-    {{ content | safe }}
+    {{ pageItem.content | safe }}
     </div>
     </article>
     <div class="homepage-cards">
@@ -29,7 +37,7 @@
 <article class="page">
     <h1>{{ pageTitle }}</h1>
     <div class="api-content">
-        {{ content | safe }}
+        {{ pageItem.content | safe }}
     </div>
 </article>
 {% endif %}
