--- a/src/scss/components/_news-and-views.scss
+++ b/src/scss/components/_news-and-views.scss
@@ -158,7 +158,8 @@
 
 				// Style featured images
 				img {
-					height: auto;
+					height: 100%;
+					object-fit: cover;
 					width: 100%;
 				}
 			}
