--- a/src/search.njk
+++ b/src/search.njk
@@ -29,7 +29,7 @@ permalink: /search/
 					  <svg v-if="item.picture===null" class="logo news-item-img">
 						  <use xlink:href="#placeholder" />
 					  </svg>
-						<img v-else :src="item.picture" :alt="item.altTag" loading="lazy">
+						<img v-else :src="item.picture" :alt="item.altTag">
 				  </figure>
 
 				  <h2 class="h3">
