fix: fix html validation errors and warnings

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -33,7 +33,7 @@
 		<link rel="stylesheet" type="text/css" href="/lib/infusion/dist/assets/src/framework/preferences/css/SeparatedPanelPrefsEditor.css"/>
 
 		<!-- The Infusion Library for UI Options -->
-		<script type="text/javascript" src="/lib/infusion/dist/infusion-uio.min.js"></script>
+		<script src="/lib/infusion/dist/infusion-uio.min.js"></script>
 	</head>
 	<body>
 		<div id="defaultContainer">
