--- a/src/_includes/globals/matomo-analytics.njk
+++ b/src/_includes/globals/matomo-analytics.njk
@@ -1,5 +1,5 @@
 <!-- Matomo -->
-<script type="text/javascript">
+<script>
   var _paq = window._paq || [];
   /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
   _paq.push(['trackPageView']);
