--- a/src/tags.njk
+++ b/src/tags.njk
@@ -15,6 +15,12 @@ permalink: "tags/{{ oneTagPage.slug }}/{% if oneTagPage.pageNumber %}page/{{ one
 {% endif %}
 
 {% block content %}
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <symbol id="placeholder" viewBox="-4 -4 224 224">
+      {% include 'svg/placeholder.svg' %}
+    </symbol>
+  </svg>
+
 	<article class="tags">
 		<h1>Tag: “{{ oneTagPage.title }}”</h1>
 		<div class="news-grid">
