--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -1,5 +1,26 @@
 // Mixins.
 
+// Maintain aspect ration of a container
+@mixin aspect-ratio($width, $height) {
+	position: relative;
+
+	&::before {
+		content: " ";
+		display: block;
+		padding-top: ($height / $width) * 100%;
+		width: 100%;
+	}
+
+	> .content {
+		bottom: 0;
+		left: 0;
+		margin: 0;
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+}
+
 // To adapt to UIO contrast themes
 @mixin adapt-to-uioThemes($fColor, $bColor) {
 	// WeCount logo
