--- a/src/search.njk
+++ b/src/search.njk
@@ -25,27 +25,32 @@ permalink: /search/
 			  {# TODO: The gride item layout below can go into a sharable vue template script
 			  when https://github.com/11ty/eleventy-plugin-vue is released #}
 			  <article class="news-item">
-				  <figure v-if="item.category==='views'" class="preview-media">
-					  <svg class="logo news-item-img">
-						  <use xlink:href="#placeholder" />
-					  </svg>
-				  </figure>
+					<div class="preview-media-wrapper">
+					  <figure v-if="item.category==='views'" class="content">
+						  <svg v-if="item.picture===null" class="logo placeholder-img">
+							  <use xlink:href="#placeholder" />
+						  </svg>
+							<img v-else :src="item.picture" :alt="item.altTag">
+					  </figure>
+					</div>
 
-				  <h2 class="h3">
-					  <a :href="item.href">
-						  {{ '{{ item.title }}' }}
-					  </a>
-				  </h2>
+					<div class="content-preview">
+					  <h2 class="h3">
+						  <a :href="item.href">
+							  {{ '{{ item.title }}' }}
+						  </a>
+					  </h2>
 
-				  <div v-if="item.category==='views'" class="author">
-					  {{ '{{ item.author }}' }}
-				  </div>
+					  <div v-if="item.category==='views'" class="author">
+						  {{ '{{ item.author }}' }}
+					  </div>
 
-				  <div v-if="item.dateTime" class="date">
-					  <time :datetime="item.dateTime" class="dt-published">{{ '{{ item.dateTime }}' }}</time>
-				  </div>
+					  <div v-if="item.dateTime" class="date">
+						  <time :datetime="item.dateTime" class="dt-published">{{ '{{ item.dateTime }}' }}</time>
+					  </div>
 
-				  <div v-html="item.excerpt" class="preview-content" />
+					  <div v-html="item.excerpt" class="preview-content" />
+					</div>
 			  </article>
 		  </div>
 	  </div>
