--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -67,5 +67,5 @@
 		local('Roboto'),
 		local('Roboto-Regular'),
 		url('../fonts/roboto-v20-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-		url('../fonts/roboto-v20-latin-regular.woff') format('woff'), /* Modern Browsers */
+		url('../fonts/roboto-v20-latin-regular.woff') format('woff'); /* Modern Browsers */
 }
