--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -50,7 +50,7 @@
 	--theme-link-fill: currentColor;
 
 	// Placeholder images on the "views" page
-	svg.news-item-img use {
+	svg.placeholder-img use {
 		stroke: var(--placeholder-stroke, currentColor);
 		stroke-linecap: round;
 		stroke-width: rem(3);
