--- a/src/scss/components/_aside.scss
+++ b/src/scss/components/_aside.scss
@@ -14,6 +14,9 @@ aside {
 				list-style-type: none;
 				margin-left: rem(45);
 				padding: 0 rem(0);
+				position: -webkit-sticky;
+				position: sticky;
+				top: rem(58);
 				width: rem(195);
 
 				li {
