--- a/src/_includes/components/search-views.njk
+++ b/src/_includes/components/search-views.njk
@@ -1,4 +1,4 @@
 {% set searchAction = "/views/" %}
 {% set placeholderForSearch = "Search posts ..." %}
 {% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
-{% include 'components/search.njk' %}
+{% include 'components/search-container.njk' %}
