--- a/src/scss/components/_aside.scss
+++ b/src/scss/components/_aside.scss
@@ -4,7 +4,7 @@ aside {
 }
 
 @media screen and (min-width: rem(1024)) {
-	aside {
+	#defaultContainer aside {
 		display: inherit;
 		padding-top: rem(58);
 
@@ -34,7 +34,7 @@ aside {
 
 					a {
 						color: $navy-light;
-						font-size: rem(24);
+						font-size: rem(24) !important; // Enactors.css in infusion uses !important on this element
 						font-weight: $font-weight-normal;
 
 						&:active {
