fix: "npm run start" no longer needs to run twice to start the dev site

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -7,7 +7,7 @@
 		{% include 'globals/matomo-analytics.njk' %}
 		{% include 'globals/google-analytics.njk' %}
 		{% include 'globals/meta.njk' %}
-		<link rel="stylesheet" href="/css/main.css"/>
+		<link rel="stylesheet" href="/scss/main.css"/>
 		<script src="/js/main.js" defer></script>
 		<link rel="preload" href="/lib/infusion/dist/infusion-uio.min.js" as="script">
 		{% block headerScripts %}{% endblock %}
