--- a/src/_includes/components/search-container.njk
+++ b/src/_includes/components/search-container.njk
@@ -1,6 +1,6 @@
 <div class="search-container">
 	{% include 'svg/search.svg' %}
-	<form id="search-form" method="get" action="/search/">
+	<form method="get" action="/search/">
 		<input name="s" type="search" placeholder="Search..." aria-label="Enter keywords for a site-wide search">
 	</form>
 </div>
