--- a/src/scss/components/_aside.scss
+++ b/src/scss/components/_aside.scss
@@ -10,7 +10,7 @@ aside {
 
 		nav {
 			ul {
-				border-left: 1px solid $green-dark;
+				box-shadow: rem(1) 0 0 0 inset $green-dark;
 				list-style-type: none;
 				margin-left: rem(45);
 				padding: 0 rem(0);
@@ -20,16 +20,14 @@ aside {
 				width: rem(195);
 
 				li {
-					line-height: rem(34);
+					left: rem(-2);
 					margin: 0 0 rem(23) 0;
-					padding-left: rem(30);
+					padding-left: rem(28);
 					width: rem(151);
 					word-wrap: break-word;
 
 					&:active {
-						border-left: rem(5) solid $green-dark;
-						left: rem(-3);
-						margin: 0 0 rem(23) 0;
+						box-shadow: rem(5) 0 0 0 inset $green-dark;
 						padding-left: rem(30);
 						position: relative;
 					}
@@ -48,9 +46,7 @@ aside {
 				}
 
 				li.active {
-					border-left: rem(5) solid $green-dark;
-					left: rem(-3);
-					margin: 0 0 rem(23) 0;
+					box-shadow: rem(5) 0 0 0 inset $green-dark;
 					padding-left: rem(30);
 					position: relative;
 				}
