fix: display the search container on the views search result page

--- a/src/_includes/components/header-nav.njk
+++ b/src/_includes/components/header-nav.njk
@@ -2,6 +2,9 @@
 	<symbol id="menu-icon" viewBox="0 0 1536 1536">
 		{% include 'svg/menu.svg' %}
 	</symbol>
+	<symbol id="search" viewBox="0 0 21 22">
+		{% include 'svg/search.svg' %}
+	</symbol>
 </svg>
 
 {% set searchAction = "/search/" %}
