--- a/src/post.njk
+++ b/src/post.njk
@@ -39,3 +39,14 @@ permalink: "views/{{ postItem.slug }}/"
 	{% endif %}
 </article>
 {% endblock %}
+
+{% block footerScripts %}
+<script src="/js/content-header-observer.js"></script>
+<script>
+	// Track all h1 and h2 in content for the Views post page.
+document.querySelectorAll("main article.post-article h1, main article.post-article h2, header").forEach((section) => {
+	const contentHeaderObserver = getSideMenuObserver();
+	contentHeaderObserver.observe(section);
+});
+</script>
+{% endblock %}
