--- a/src/post.njk
+++ b/src/post.njk
@@ -29,7 +29,7 @@ permalink: "views/{{ postItem.slug }}/"
     <h3>Tags</h3>
     <div class="tags">
     {% for tag in postItem.tags %}
-    <a href="/tags/{{ tag | slug }}">{{ tag | safe }}</a>
+    <a href="/tags/{{ tag | slug }}/">{{ tag | safe }}</a>
     {% endfor %}
     </div>
   </section>
